<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnStartScan"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="5dp"
        android:layout_weight="0.15"
        android:ems="10"
        android:hint="@string/B_SendContent" />

    <Button
        android:id="@+id/btnSendContent"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/btnBlue"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:text="@string/B_Send"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/btnStartScan"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btnSendContent"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:text="@string/B_SendList"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnStartScan"
        android:layout_below="@+id/btnStop"
        android:layout_marginTop="5dp">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnStop"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btnConnect"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/B_Close"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btnStartScan"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/B_Clear"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btnSet"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/B_Connect"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/tvGetData"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editText2" />

    <Button
        android:id="@+id/btnBlue"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/B_Open"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/btnSet"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btnClear"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/B_Select"
        android:textColor="@android:color/background_light" />

</RelativeLayout>